<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/actionModeBackground"
    tools:context=".LibraryActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH3a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH3b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/guidelineH2"
        app:layout_constraintEnd_toEndOf="@id/guidelineV4"
        app:layout_constraintStart_toStartOf="@id/guidelineV1"
        app:layout_constraintTop_toTopOf="@id/guidelineH1">

        <EditText
            android:id="@+id/LibraryEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.95"
            android:hint="  Search for books "
            android:inputType="text"
            android:textColor="?attr/colorPrimary"
            android:textColorHint="?attr/hintTextColor" />

        <ImageButton
            android:id="@+id/LibrarySearchButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_button_common_one"
            android:contentDescription="@string/SearchButtonContentDescription"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_accent_search" />

        <ImageButton
            android:id="@+id/LibraryBookDetailsButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_button_common_two"
            android:contentDescription="@string/SearchButtonContentDescription"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_accent_deselect" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/LibraryGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="8"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineH4"
        app:layout_constraintEnd_toEndOf="@id/guidelineV4"
        app:layout_constraintStart_toStartOf="@id/guidelineV1"
        app:layout_constraintTop_toTopOf="@id/guidelineH3" />

<!--    <Button-->
<!--        android:id="@+id/LibraryCommentsButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/guidelineH3b"-->
<!--        app:layout_constraintEnd_toEndOf="@id/guidelineV3"-->
<!--        android:text="Show Linked Comments"-->
<!--        android:background="@drawable/rounded_button_one"/>-->



</androidx.constraintlayout.widget.ConstraintLayout>