<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="?attr/panelBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="end"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/DeleteCloseButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button_five"
            android:contentDescription="@string/CloseButtonContentDescription"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_close" />
    </LinearLayout>

    <ListView
        android:id="@+id/DeleteListView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp">
    </ListView>

    <Button
        android:id="@+id/DeleteOKButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button_five"
        android:padding="10dp"
        android:layout_gravity="center"
        android:text="Delete Selected Models"
        android:textColor="@color/colorLightText" />

</LinearLayout>